# kuro-sign

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  format.yml
automated/: build_and_run.sh
src/: ansi.h  file.c  file.h  gh.c  gh.h  kuro.h  kuro_footer.h  logger.c  logger.h  main.c  main.h
